tests/fixtures/github/errors/server_error.http
HTTP/2.0 502 Bad Gateway
Content-Type: application/json; charset=utf-8
Date: Fri, 01 Jan 2027 00:00:00 GMT
X-Github-Api-Version-Selected: 2022-11-28

{
  "message": "Server Error"
}
